--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "linkide cli toolkit",
   "main": "ide.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "bin": {
     "linkide": "ide.js"
   },
@@ -27,9 +25,18 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "chalk": "^2.4.1",
+    "command-exists": "^1.2.8",
     "fs-extra": "^7.0.1",
-    "gitlab": "^4.3.0",
-    "prompt": "^1.0.0",
+    "prompts": "^2.0.3",
+    "simple-git": "^1.107.0",
     "yargs": "^12.0.5"
+  },
+  "devDependencies": {
+    "eslint": "^5.14.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
